--- a/news.html
+++ b/news.html
@@ -209,7 +209,7 @@
 								</p>
 							</div>
 							<div class="paragraph_oba5AE">
-								<p>新站点上线，AICRobo开启招聘模式！</p>
+								<p>新站点上线，AICRobo经历了三年磨练，开启招募模式，广纳英杰！</p>
 
 							</div>
 						</div>
