--- a/joinus.html
+++ b/joinus.html
@@ -161,7 +161,7 @@
 			</div>
 			<br />
 			<br />
-			简历请投递：<a class="c-textlink textlink_nc0zuSjr" href="mailto:jobs@aicrobo.com">jobs AT aicrobo.com</a>
+			<a class="c-textlink textlink_nc0zuSjr" href="https://www.jiandaoyun.com/f/56a9b3d6afa63a713ff5f3f7?ext=aicrobo">简历投递链接</a>（若投递过程遇到困难，请联系邮箱jobs@aicrobo.com）
 		</h1>
 		
 		<ul class="c-list list_gS0FYj">
