--- a/joinus.html
+++ b/joinus.html
@@ -157,7 +157,7 @@
 		</h1>
 		<h1 class="c-heading heading_TIOJFH2">
 			<div class="textlink_VgwmCM">
-				AICRobo是一个崇尚工程师文化的团队（叛逆，多元，机会均等，拒绝平庸），让你衣食无忧地玩智能机器人开发，顺便改变下世界！
+				AICRobo是一个崇尚工程师文化和工匠精神的团队（叛逆，多元，机会均等，拒绝平庸，追求卓越），让你衣食无忧地玩智能机器人开发，顺便改变下世界！
 			</div>
 			<br />
 			<br />
