--- a/joinus.html
+++ b/joinus.html
@@ -217,7 +217,7 @@
 				<div class="row c-row row_TtSdnG">
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 c-column column_HK3cls">
 						<p class="paragraph_hY7kJp2">
-							电子工程师
+							电子硬件工程师
 						</p>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 c-column column_A9FZVE">
