Remove fighting things This reverts commit ffa01ddb91e60a350b8ec88d3075e64bd730c85f.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="keywords" content="爱啃萝卜公司,爱啃萝卜机器人,爱啃萝卜官网,机器人设计定制,turtlebot机器人,智能移动机器人,机器人硬件,机器人软件系统,ubuntu for ros,slam,yuanboshe">
-    <meta name="description" content="AICRobo爱啃萝卜机器人技术（深圳）有限责任公司以“fighting or nothing”为企业宗旨，致力于成为国内领先的服务型机器人操作系统、人工智能解决方案及智能移动机器人设计研发为一体的技术公司。业务已遍及13个省的23个城市，并与包括南京大学LAMDA 研究所和华东师范大学智能机器人运动与视觉实验室在内的25所高校建立了战略合作伙伴关系。">
+    <meta name="description" content="AICRobo爱啃萝卜机器人技术（深圳）有限责任公司以匠心产品为企业宗旨，致力于成为国内领先的服务型机器人操作系统、人工智能解决方案及智能移动机器人设计研发为一体的技术公司。业务已遍及13个省的23个城市，并与包括南京大学LAMDA 研究所和华东师范大学智能机器人运动与视觉实验室在内的25所高校建立了战略合作伙伴关系。">
     <meta name="author" content="aicrobo">
 	<meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -119,7 +119,7 @@
 						止战则殇
 					</h1>
 					<h1 class="paragraph_mtbGwQ">
-						FIGHTING OR NOTHING
+						匠心别具
 					</h1>
 				</div>
 			</div>
